force-app/main/default/objects/Construction_Job__c/Construction_Job__c.object-meta.xml
<CustomObject>
    <label>Construction Job</label>
    <nameField>
        <label>Construction Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Construction Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>