force-app/main/default/objects/Construction_Job__c/fields/Bid_Status__c.field-meta.xml
<CustomField>
    <fullName>Bid_Status__c</fullName>
    <label>Bid Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Qualified</fullName>
                <default>true</default>
                <label>Pre Qualified</label>
            </value>
            <value>
                <fullName>Bidding</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>