force-app/main/default/objects/Construction_Job__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
                <default>true</default>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>LEED_Green</fullName>
                <label>LEED/Green</label>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>