force-app/main/default/objects/Construction_Job__c/fields/Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Construction_Status__c</fullName>
    <label>Construction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design</fullName>
                <default>true</default>
                <label>Design</label>
            </value>
            <value>
                <fullName>GC Selection</fullName>
            </value>
            <value>
                <fullName>Subcontractor Selection</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>