force-app/main/default/objects/Construction_Job__c/listViews/Construction_Jobs_by_Status.listView-meta.xml
<ListView>
    <fullName>Construction_Jobs_by_Status</fullName>
    <columns>NAME</columns>
    <columns>Building_Type__c</columns>
    <columns>Bid_Status__c</columns>
    <columns>Construction_Status__c</columns>
    <columns>Total_Project_Value__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>Construction Jobs by Status</label>
</ListView>